syntax = "proto3";
package palma.test;

option java_package = "vertis.palma.test";
option java_outer_classname = "DictionarySchemeSamples";
option java_multiple_files = true;

import "palma/palma_options.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "options.proto";


message Bucket {
    option (palma.message).name = "test/bucket";
    option (palma.message).title = "Корзина";

    string id = 1 [(palma.field).key = true, (palma.field).title = "Идентификатор"];

    repeated Fruit fruits = 2 [(palma.field).link = true];

    BucketSize size = 3;

    google.protobuf.Timestamp create_time = 4;
    google.protobuf.Duration life_time = 5 [(required) = true];

}

message BucketSize {
    int32 size = 1;
}

message Fruit {
    option (palma.message).name = "test/fruit";
    option (palma.message).title = "Фрукт";
    option (palma.message).hidden = true;
    option (palma.message).listing_fields = "name";
    option (palma.message).listing_fields = "type";

    string name = 1 [(palma.field).key = true, (palma.field).title = "Название"];
    FruitType type = 2;
    string alias = 3 [(palma.field).as_title = true];

    enum FruitType {
        UNKNOWN = 0;

        APPLE = 1 [(palma.enum_value).title = "Яблоко"];
        ORANGE = 2;
    }
}

message HasRecursion {
    option (palma.message).name = "test/recursion";

    string name = 1 [(palma.field).key = true];

    HasRecursion recursion = 2;
}

message OneOfBucket {
    option (palma.message).name = "test/one_of";
    option (palma.message).title = "OneOf";

    string name = 1 [(palma.field).key = true, (palma.field).title = "Название"];

    oneof oneof_field_1 {
        string first = 2;
        string second = 3;
    }

    oneof oneof_field_2 {
        int32 first_int = 4;
        int32 second_int = 5;
    }
}
