syntax = "proto3";

package vertis.protobuf.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message NonPrimitiveData {
    int32 a = 1;
    int32 b = 2;
}

message ComplexMessage {
    int32 primitive = 1;

    NonPrimitiveData non_primitive = 2;

    google.protobuf.Int32Value int32_value = 3;
    google.protobuf.UInt32Value uint32_value = 4;
    google.protobuf.Int64Value int64_value = 5;
    google.protobuf.UInt64Value uint64_value = 6;
    google.protobuf.FloatValue float_value = 7;
    google.protobuf.DoubleValue double_value = 8;
    google.protobuf.StringValue string_value = 9;
    google.protobuf.BoolValue bool_value = 10;
    google.protobuf.BytesValue bytes_value = 11;
}